2008-04-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add version.sh, DEPENDENCIES, HACKING,
	autogen.sh, build-aux/fixaclocal.
	* version.sh: New file.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	Allow building as a shared library on AIX.
	* lib/Makefile.am (libunistring_la_LDFLAGS): Add -no-undefined flag
	and INTL_MACOSX_LIBS (for MacOS X).

2008-04-05  Bruno Haible  <bruno@clisp.org>

	Use libtool versioning.
	* lib/Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): New macros.
	(libunistring_la_LDFLAGS): Pass -version-info option.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* gnulib-m4/gnulib-cache.m4: New file, generated by gnulib-tool.

	* autogen.sh: New file.
	* configure.ac: New file.
	* build-aux/fixaclocal: New file, from GNU gettext.
	* Makefile.am: New file.
	* lib/Makefile.am: New file.
	* tests/Makefile.am: New file.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Renamed from INSTALL.generic. Add section about
	prerequisites,

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/*.texi: Add index entries.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/unistr.texi (Elementary string functions): Document
	u{8,16,32}_cmp2.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi (func, posixfunc): New macros.
	Use them where appropriate.
	* doc/unistr.texi: Likewise.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi: Complete the detailmenu.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi: New file.
	* doc/unitypes.texi: New file, based on gnulib/lib/unitypes.h.
	* doc/unistr.texi: New file, based on gnulib/lib/unistr.h.
	* doc/uniconv.texi: New file, based on gnulib/lib/uniconv.h.
	* doc/unistdio.texi: New file, based on gnulib/lib/unistdio.h.
	* doc/uniname.texi: New file, based on gnulib/lib/uniname.h.
	* doc/unictype.texi: New file, based on gnulib/lib/unictype.h.
	* doc/uniwidth.texi: New file, based on gnulib/lib/uniwidth.h.